# sandbox-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: settings.py
examples/: advanced_agent.py  basic_agent.py  mcp_agent.py  modern_agent.py
src/: main.py
src/agents/: base_agent.py  conversational_agent.py  planning_agent.py  poc_agent.py  pocgen_agent.py  sandbox_agent.py
src/clients/: __init__.py  base_client.py  basechat_openai_client.py  chat_openai_client.py  glm_client.py  openai_client.py
src/config/: settings.py
src/core/: __init__.py  workflow.py
src/framework/: __init__.py  agent_framework.py  mcp_integration.py  tool_manager.py
src/memory/: conversation_memory.py  memory_manager.py
src/models/: llm_configs.py  planning_models.py  poc_models.py  sandbox_models.py  workflow_models.py
src/prompt/: planning_prompt.py  poc_prompt.py  sandbox_prompt.bak.py  sandbox_prompt.py
src/tools/: README.md  base_tools.py  file_tools.py  sandbox_tools.py  web_tools.py
src/tools/common/: __init__.py  code_analysis_tools.py  file_system_tools.py  file_tools.py  search_tool.py  system_tools.py
src/tools/mcp/: __init__.py  mcp_client.py  mcp_registry.py  mcp_server_manager.py  mcp_tool_adapter.py
src/utils/: helpers.py  logger.py  settings.py
tests/: test_agents.py  test_mcp.py  test_tools.py
